samples/_failures_safe/1761487032_c0d465_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ee2ed9a.c: In function ‘main’:
./samples/SAFE/__tmp_5ee2ed9a.c:176:9: error: expected declaration or statement at end of input
  176 |         fprintf(stderr, "No tokens found\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_5ee2ed9a.c:176:9: error: expected declaration or statement at end of input
